improvement - ea product grid item shadow, padding, alignment, badge, overlap etc issue fixing

--- a/src/css/view/product-grid.scss
+++ b/src/css/view/product-grid.scss
@@ -20,6 +20,12 @@
                 width: 100%;
                 margin: 0;
                 padding: 0;
+                a.add_to_cart_button,
+                span.price,
+                h2.woocommerce-loop-product__title {
+                    margin-left: 10px !important;
+                    margin-right: 10px !important;
+                }
             }
 
             &.products[class*='columns-'] li.product {
@@ -146,7 +152,7 @@
 
                     // add to cart button
                     .button.add_to_cart_button {
-                        display: block;
+                        display: inline-block;
                         font-size: 14px;
                         font-weight: 400;
                         line-height: 38px;
@@ -155,7 +161,7 @@
                         color: #fff;
                         background-color: #333;
                         padding: 0;
-                        margin: 15px;
+                        padding: 5px 25px;
                         border-radius: 0;
                         &::before {
                             content: "\f217";
@@ -233,7 +239,6 @@
                     border-radius: 0;
                     background-color: #fff;
                     box-shadow: none;
-
                     a {
                         text-decoration: none;
 
@@ -267,7 +272,9 @@
                         .product-link,
                         .add_to_cart_button,
                         .added_to_cart {
-                            display: inline-block;
+                            display: inline-flex;
+                            justify-content: center;
+                            align-items: center;
                             font-size: 14px;
                             line-height: 38px;
                             text-align: center;
@@ -425,6 +432,15 @@
 
     // default style
     &.eael-product-default {
+        .woocommerce ul.products li.product {
+            overflow: visible !important;
+            .onsale {
+                line-height: inherit;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }
         .button.add_to_cart_button {
             &::before {
                 content: "\f217";
